<package>
  <name>ompl_rviz_viewer</name>
  <version>1.0.1</version>
  <description>3-D visualizer for cost-based planning algorithms implemented with the Open Motion Planning Library (OMPL). Publishes ROS messages to the RViz using RViz markers. Displays all explored states, connecting edges and the final solution path. Useful for learning and testing robotic motion planning algorithms.</description>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>
  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ompl_rviz_viewer</url>
  <url type="bugtracker">https://github.com/davetcoleman/omlp_rviz_viewer/issues</url>
  <url type="repository">https://github.com/davetcoleman/omlp_rviz_viewer/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend> 
  <build_depend>visualization_msgs</build_depend>
  <build_depend>ompl</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend> 
  <run_depend>visualization_msgs</run_depend>
  <run_depend>ompl</run_depend>

  <export>

  </export>
</package>