<package>
  <name>ompl_visual_tools</name>
  <version>2.2.1</version>
  <description>
    Rviz 3-D visualizer for planning algorithms implemented with the Open Motion Planning Library (OMPL)
  </description>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>
  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ompl_visual_tools</url>
  <url type="bugtracker">https://github.com/davetcoleman/ompl_visual_tools/issues</url>
  <url type="repository">https://github.com/davetcoleman/ompl_visual_tools/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>graph_msgs</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>moveit_planners_ompl</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend> 
  <build_depend>visualization_msgs</build_depend>
  <build_depend version_gte="0.14.0">ompl</build_depend>

  <run_depend>graph_msgs</run_depend>
  <run_depend>moveit_visual_tools</run_depend>
  <run_depend>moveit_planners_ompl</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend> 
  <run_depend>visualization_msgs</run_depend>
  <run_depend version_gte="0.14.0">ompl</run_depend>

  <export>
  </export>
</package>